# tinker

./: .gitignore  AGENTS.md  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/pdfreader/: PdfReaderApp.kt
android/app/src/main/java/com/pdfreader/core/: PdfDocument.kt  PdfNative.kt
android/app/src/main/java/com/pdfreader/data/: AnnotationStore.kt  BookmarkStore.kt  DictionaryRepository.kt  SettingsStore.kt
android/app/src/main/java/com/pdfreader/ui/: MainActivity.kt  PdfBookView.kt  PdfVerticalView.kt  ReaderActivity.kt
android/app/src/main/res/drawable/: bg_annotation_item.xml  bg_color_dot.xml  bg_recent_item.xml  bg_selection_toolbar.xml  ic_annotations.xml  ic_back.xml  ic_bookmark.xml  ic_copy.xml  ic_dark.xml  ic_delete_forever.xml  ic_dictionary.xml  ic_goto.xml  ic_highlight.xml  ic_launcher_foreground.xml  ic_mode.xml  ic_next.xml  ic_open.xml  ic_pdf.xml  ic_prev.xml
android/app/src/main/res/layout/: activity_main.xml  activity_reader.xml  item_annotation.xml  item_recent.xml  selection_toolbar.xml  sheet_annotations.xml  sheet_dictionary.xml
android/app/src/main/res/mipmap/: ic_launcher_round.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/values-pt/: strings.xml
core/: CMakeLists.txt
core/include/: pdf_engine.h
core/src/: pdf_engine.cpp
